<resources>
    <string name="app_name">HelloAndroid</string>
    <string name="background_desc">Man taking steps to climb career ladder.</string>
    <string name="logo_desc">Udacity logo.</string>
    <string name="address">2465 Latham St \nMountain View, CA 94043</string>
    <string name="phone">650–555–5555</string>
    <string name="web">www.udacity.com</string>
    <string name="logo">Be in Demand</string>
</resources>
